# infra

./: .editorconfig  .gitignore  LICENSE  README.md  build-db-dell-R410.nix  build-machines-1950.nix  build-machines-common.nix  build-machines-dell-1950.nix  build-machines-dell-r815.nix  build-machines-hps.nix  build-machines.nix  cartman.nix  channels.nix  common.nix  couchdb.nix  cron.sh  dhcpd.conf  drdoctor.nix  flake.nix  hydra-mirror.nix  hydra-module.nix  hydra.nix  id_buildfarm.pub  ike.nix  infrastructure.nix  keys.nix  lucifer.nix  machines.nix  main.nix  mass-update.sh  mrhankey.nix  mrkitty.nix  nagios-base.cfg  network.nix  pyproject.toml  renovate.json  run-queries.sh  ssh-keys.nix  stan.nix  statix.toml  (+3 more)
.github/: CODEOWNERS
amis/: .terraform.lock.hcl  Makefile  flake.nix  generate-nixpkgs-update  main.tf  providers.tf  pull-latest  regions.jq  regions.json  state.tf  variables.tf
bastion/: .terraform.lock.hcl  README.md  bastion.tf  configuration.nix  deploy.sh  flake.nix  network.nix  terraform.tf
builders/: flake-module.nix
buildfarm/: jobs.nix
checks/: flake-module.nix
cloud/: cloud-vm.nix
delft/: build-machine-common.nix  build-machines-common.nix  build-machines-dell-1950.nix  build-machines-dell-r815.nix  cartman.nix  ceres.nix  chef.nix  common.nix  datadog.nix  delft-webserver.nix  diffoscope.nix  eris-physical.nix  eris.nix  flake.nix  fstrim.nix  haumea-physical.nix  haumea.nix  hydra-proxy.nix  (+20 more)
modules/prometheus/nixos-exporter/: default.nix  pyproject.toml
modules/prometheus/nixos-exporter/prometheus_nixos_exporter/: __main__.py
(+632 files in other folders)
